resugaring (#198)
Co-authored-by: VortexSo4 <kreker.maxim@mail.ru>